# agent-craft

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  design_update.md  docker-compose.yml  start.sh
agent-api/: .dockerignore  .env.example  BACKEND.md  Dockerfile  alembic.ini  entrypoint.sh  main.py  pyproject.toml  requirements.txt  setup.py
agent-api/alembic/: env.py
agent-api/alembic/versions/: 5ff038219ae5_add_conversation_history_aggregates.py  7ed62337ffeb_add_auto_approve_to_api_keys.py  8f92617d07be_baseline_existing_schema.py  9c1d4f7a2b3e_add_llm_models.py  a82f03faae0f_add_tool_invocations_and_skill_runs.py  a8c7f3e9b1d4_make_timestamps_tz_aware.py
agent-api/scripts/: ensure_schema.py  init_db.py  verify_setup.py
agent-api/src/: __init__.py  config.py
agent-api/src/agent/: __init__.py  file_bridge.py  graph.py  llm.py  nodes.py  state.py  tools_cache.py
agent-api/src/api/: __init__.py  admin_models.py  admin_schemas.py  admin_skills.py  admin_tools.py  admin_users.py  ai_helper.py  api_keys.py  app.py  approval_utils.py  auth.py  auth_deps.py  auth_schemas.py  conversations.py  observability.py  problem_details.py  schemas.py  state.py  user_files.py  user_schemas.py  user_tools_skills.py
agent-api/src/db/: __init__.py  database.py
agent-api/src/models/: __init__.py  api_key.py  audit_log.py  base.py  invocations.py  llm_model.py  session.py  skill.py  tool.py  user.py  workspace.py
agent-api/src/services/: llm_service.py  tool_assignment.py  workspace_service.py
agent-api/src/skills/: __init__.py  base.py  registry.py  (+2 more)
(+99 files in other folders)
